--- a/PlexPurge/.classpath
+++ b/PlexPurge/.classpath
@@ -26,7 +26,7 @@
 	<classpathentry kind="lib" path="/ADTPulseMonitor/library/httpmime-4.3.4.jar"/>
 	<classpathentry kind="lib" path="/ADTPulseMonitor/library/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="/ADTPulseMonitor/library/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/webcam_server/webcam_lib/xstream-1.4.3.jar"/>
+	<classpathentry kind="lib" path="E:/myprojects/workspace/webcam_server/webcam_lib/xstream-1.4.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_92">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
