Removed GuideBox and now using JustWatchAPI

--- a/PlexPurge/bin/log4j.properties
+++ b/PlexPurge/bin/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=ERROR, file, stdout
+log4j.rootLogger=DEBUG, file, stdout
 
 log4j.logger.org.apache.http.wire=WARN
 log4j.logger.org.apache.http=ERROR
