--- a/PlexPurge/src/log4j.properties
+++ b/PlexPurge/src/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=ERROR, file, stdout
+log4j.rootLogger=DEBUG, file, stdout
 
 log4j.logger.org.apache.http.wire=WARN
 log4j.logger.org.apache.http=ERROR
@@ -14,6 +14,6 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
  
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.Target=System.err
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
