--- a/PlexPurge/.gitignore
+++ b/PlexPurge/.gitignore
@@ -17,6 +17,10 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+.classpath
+.project
+**/*.class
+**/*.zip
 
 # External tool builders
 .externalToolBuilders/
