--- a/PlexJobServer/.gitignore
+++ b/PlexJobServer/.gitignore
@@ -84,4 +84,6 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 
+*.class
+
 # End of https://www.gitignore.io/api/maven,eclipse
