--- a/PlexPurge/pom.xml
+++ b/PlexPurge/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>PlexPurge</groupId>
 	<artifactId>PlexPurge</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>PlexPurge</name>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
