--- a/PlexJobServer/pom.xml
+++ b/PlexJobServer/pom.xml
@@ -57,13 +57,8 @@
 					<server>${tomcat-server}</server>
 					<path>/PlexJobServer</path>
 				</configuration>
-				<!-- 
-				<configuration>
-					<url>http://192.168.1.164:8080/manager/text</url>
-					<server>AtomicPi</server>
-					<path>/PlexJobServer</path>
-				</configuration>
-				 -->
+				<!-- <configuration> <url>http://192.168.1.164:8080/manager/text</url> 
+					<server>AtomicPi</server> <path>/PlexJobServer</path> </configuration> -->
 			</plugin>
 		</plugins>
 	</build>
@@ -108,6 +103,21 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.11</version>
+		</dependency>
 	</dependencies>
 </project>
